; ModuleID = '/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_rot.c_rot_init.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_rot.c_rot_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i64*, i32)* @rot_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rot_init(i64* %0, i64* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i64* %0, i64** %5, align 8
  store i64* %1, i64** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i64*, i64** %5, align 8
  %10 = icmp ne i64* %9, null
  br i1 %10, label %11, label %24

11:                                               ; preds = %3
  %12 = load i64*, i64** %6, align 8
  %13 = icmp ne i64* %12, null
  br i1 %13, label %14, label %24

14:                                               ; preds = %11
  %15 = load i32, i32* %7, align 4
  %16 = icmp sgt i32 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %14
  %18 = load i64*, i64** %6, align 8
  %19 = bitcast i64* %18 to i8*
  %20 = call i32 @atoi(i8* %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @mod(i32 %21, i32 26)
  %23 = load i64*, i64** %5, align 8
  store i64 %22, i64* %23, align 8
  store i32 1, i32* %4, align 4
  br label %25

24:                                               ; preds = %14, %11, %3
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %24, %17
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i64 @mod(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
